Petitions model and documentation added
